# samurai-browser

./: .gitignore  Cargo.toml  Makefile.toml  README.md  biome.json  cefbased.exe.manifest  index.html  package.json  pnpm-lock.yaml  rust-toolchain.toml  tsconfig.json  vite.config.ts
.github/workflows/: rust.yml
design/: 001.md
src/: main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/domains/: custom_macro.rs  mod.rs  tabs.rs  window.rs
src-tauri/src/domains/tabs/: commands.rs  mod.rs  repo.rs
src-tauri/src/domains/tabs/model/: mod.rs  tab.rs  tab_addr.rs
src-tauri/src/domains/tabs/repo/: create_new_tab.rs  get_active_tab.rs  get_opened_tabs.rs  mod.rs  set_active_tab.rs
src-tauri/src/domains/tabs/service/: get_opened_tabs.rs  mod.rs  open_new_tab.rs  set_active_tab.rs
src-tauri/src/domains/tabs/transport/: get_opened.rs  mod.rs  open_url_in_tab.rs  set_active.rs
src/1-app/: App.tsx  root.tsx
src/3-widgets/: browser_header.tsx
src/4-entities/actions/: action.provider.tsx
src/4-entities/browser_tabs/: browser_tab.tsx  browser_tabs.hook.ts  browser_tabs.tsx
src/4-entities/window/: window.layout.tsx  window_decorations.hook.tsx  window_decorations.tsx  windowtitle.module.css
src/5-shared/lib/cleanup/: cleanup.ts
src/5-shared/lib/query-client/: tanstack.provider.tsx
