

[package]
name = "samurai-browser"
version = "0.1.0"
description = "A Tauri App"
authors = [ "you" ]
edition = "2021"

[lib]
name = "samurai_browser_lib"
crate-type = [ "staticlib", "cdylib", "rlib" ]

[build-dependencies]
tauri-build = { version = "2.2.0", features = [  ] }

[dependencies]
tauri = { version = "2.5.0", features = [ "unstable" ] }
tauri-plugin-opener = "2"
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
thiserror = "2.0.12"
derive_more = { version = "2.0.1", features = [ "deref", "from" ] }
url = { version = "2.5.4", features = [ "serde" ] }
uuid = { version = "1.16.0", features = [ "serde", "v4" ] }
itertools = "0.14.0"
